--- a/index.html
+++ b/index.html
@@ -371,33 +371,41 @@
 
             // 添加这个新函数来转换时间为 UTC+8
             function convertToUTC8(dateString) {
-                const date = new Date(dateString);
-                if (isNaN(date.getTime())) {
-                    return dateString; // 如果日期无效，返回原始字符串
-                }
-                const utc8Date = new Date(date.getTime() + (8 * 60 * 60 * 1000));
-                return utc8Date.toISOString().replace('T', ' ').replace(/\.\d{3}Z$/, ' (UTC+8)');
-            }
+    const date = new Date(dateString);
+    if (isNaN(date.getTime())) {
+        console.warn("无效日期格式:", dateString); // 日志记录
+        return dateString; // 如果日期无效，返回原始字符串
+    }
+    const utc8Date = new Date(date.getTime() + (8 * 60 * 60 * 1000));
+    return utc8Date.toISOString().replace('T', ' ').replace(/\.\d{3}Z$/, ' (UTC+8)');
+}
 
-            function calculatePeriod(dateString, type) {
-                if (!dateString) return '';
+function calculatePeriod(dateString, type) {
+    if (!dateString) return '';
 
-                const date = new Date(dateString);
-                const currentDate = new Date();
-                const diffTime = Math.abs(type === 'remainingTime' ? date - currentDate : currentDate - date);
-                const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
+    const date = new Date(dateString);
+    if (isNaN(date.getTime())) { // 确保日期有效
+        return ''; // 日期无效时返回空字符串
+    }
 
-                let time, unit;
-                if (diffDays >= 365) {
-                    time = Math.floor(diffDays / 365);
-                    unit = 'years';
-                } else if (diffDays >= 30) {
-                    time = Math.floor(diffDays / 30);
-                    unit = 'months';
-                } else {
-                    time = diffDays;
-                    unit = 'days';
-                }
+    const currentDate = new Date();
+    const diffTime = Math.abs(type === 'remainingTime' ? date - currentDate : currentDate - date);
+    const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
+
+    let time, unit;
+    if (diffDays >= 365) {
+        time = Math.floor(diffDays / 365);
+        unit = 'years';
+    } else if (diffDays >= 30) {
+        time = Math.floor(diffDays / 30);
+        unit = 'months';
+    } else {
+        time = diffDays;
+        unit = 'days';
+    }
+
+    return `<span class="inline-flex items-center justify-center text-xs text-white bg-${type === 'remainingTime' ? 'green' : 'blue'}-600 rounded px-1 ml-1 align-middle" style="height: 1.5em; line-height: 1;" data-i18n="${type}" data-time="${time}" data-unit="${unit}"></span>`;
+}
 
                 return `<span class="inline-flex items-center justify-center text-xs text-white bg-${type === 'remainingTime' ? 'green' : 'blue'}-600 rounded px-1 ml-1 align-middle" style="height: 1.5em; line-height: 1;" data-i18n="${type}" data-time="${time}" data-unit="${unit}"></span>`;
             }
